syntax = "proto3";

option java_package = "com.google.startupos.tools.localserver.service";
option java_outer_classname = "Protos";

package com.google.startupos.tools.localserver.service;

service AuthService { 
  rpc postAuthData(AuthDataRequest) returns (AuthDataResponse);
}

message AuthDataRequest {
  string projectId = 1;
  string apiKey = 2;
  string jwtToken = 3;
  string refreshToken = 4;
}

// TODO: Use Empty: https://github.com/google/protobuf/blob/master/src/google/protobuf/empty.proto
message AuthDataResponse { }
